- Changed from old Burp API to montoya. - Added HttpHandler - New Context menu - Fixed bug in settings when declaring ints - Added max body length setting - Checked if over max body length and only converted headers.